Bug 520007 - After switching to custom icon from file, can no longer switch to a custom icon from the application icon browser
Summary: After switching to custom icon from file, can no longer switch to a custom ic...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kiconthemes
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.26.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-05-11 03:24 UTC by Henry Baldikoski
Modified: 2026-05-13 07:31 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: KF 6.27
Sentry Crash Report:


Attachments
video of me showing the icon not changing after selecting application icon (1.10 MB, video/webm)
2026-05-11 03:24 UTC, Henry Baldikoski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Henry Baldikoski 2026-05-11 03:24:33 UTC
Created attachment 192171 [details]
video of me showing the icon not changing after selecting application icon

DESCRIPTION
After switching to custom icon from file, can not longer switch to a custom icon from the application icon browser

STEPS TO REPRODUCE
1. Configure application launcher and go to icon in general
2. Select choose and then browse option to select an icon from a custom file on disk, then select one
3. Click choose again and try to select an icon from one of the application icons / other installed icons on the system

OBSERVED RESULT
Icon selection does not change to the application icon

EXPECTED RESULT
Icon selection updates to the newly selected icon

SOFTWARE/OS VERSIONS
Operating System (available in the Info Center app, or by running `kinfo` in a terminal window):
KDE Plasma Version: 6.6.4
KDE Frameworks Version: 6.25.0
Qt Version: 6.11.0

ADDITIONAL INFORMATION
Reset to default still works, however after you reset to default you still cannot switch to another application icon, it just goes back to the most recent image, selecting another custom image also works
Comment 1 Justin Zobel 2026-05-11 04:53:54 UTC
Confirmed on:

Operating System: Fedora Linux 44
KDE Plasma Version: 6.6.4
KDE Frameworks Version: 6.25.0
Qt Version: 6.10.3
Kernel Version: 6.19.14-300.fc44.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 32 GiB of RAM (31.3 GiB usable)
Graphics Processor: AMD Radeon RX 7600
Comment 2 cwo 2026-05-11 08:15:10 UTC
Kickoff does the right thing here; this seems to be a KIconTheme bug - it needs to reset the custom file path when accepting a gridview icon by pressing the OK button, the same way it already does when double-clicking an icon there.
Comment 3 Bug Janitor Service 2026-05-11 08:37:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kiconthemes/-/merge_requests/216
Comment 4 cwo 2026-05-13 07:31:52 UTC
Git commit c095f89c9b8b42f64a99110223853d3d25c68d4f by Christoph Wolk.
Committed on 11/05/2026 at 08:36.
Pushed by cwo into branch 'master'.

widgets/kicondialog: clear custom when pressing OK

KIconDialog stores the custom path in the Private class member custom;
slotOk always prefers the custom member (if set) over the currently
selected item in the grid. Double-clicking an icon from the grid clears
custom first before calling slotOk, but pressing the OK button does not.
This means that if the dialog is reused and the user first accepts an
icon through file system browsing, then reopens the dialog and tries to
choose an icon from the grid by selecting it and pressing OK, the icon
will remain stuck on the original (browsed) icon. But if the user
double-clicks the icon there instead, everything works out fine.

So we also clear the custom member when pressing OK, not just when
double-clicking. To avoid code duplication, we give the existing lambda
a local name and reuse it.
FIXED-IN: KF 6.27

M  +5    -3    src/widgets/kicondialog.cpp

https://invent.kde.org/frameworks/kiconthemes/-/commit/c095f89c9b8b42f64a99110223853d3d25c68d4f