widgets/kicondialog: clear custom when pressing OK

KIconDialog stores the custom path in the Private class member custom;
slotOk always prefers the custom member (if set) over the currently
selected item in the grid. Double-clicking an icon from the grid clears
custom first before calling slotOk, but pressing the OK button does not.
This means that if the dialog is reused and the user first accepts an
icon through file system browsing, then reopens the dialog and tries to
choose an icon from the grid by selecting it and pressing OK, the icon
will remain stuck on the original (browsed) icon. But if the user
double-clicks the icon there instead, everything works out fine.

So we also clear the custom member when pressing OK, not just when
double-clicking. To avoid code duplication, we give the existing lambda
a local name and reuse it.

BUG: 520007
FIXED-IN: KF 6.27